Rewriteen most of the stuff.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-magisk"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["AXON <aminurfisa3@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 nix = "0.19.1"
+sys-mount = "1.2.1"
