--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "rusty-magisk"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["AXON <aminurfisa3@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = "0.19.1"
 sys-mount = "1.2.1"
+likemod = "0.2.0"
+libmount = "0.1.15"
+faccess = "0.2.3"
