--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Install targets
       uses: actions-rs/toolchain@v1
       with:
-          target: x86_64-unknown-linux-musl, i686-unknown-linux-musl
-          override: true
+        toolchain: stable
+        target: x86_64-unknown-linux-musl, i686-unknown-linux-musl
+        override: true
     
     - name: Build x86_64
       run: RUSTFLAGS='-C link-arg=-s' cargo build --release --target x86_64-unknown-linux-musl
