--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,7 +21,14 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-        target: x86_64-unknown-linux-musl, i686-unknown-linux-musl
+        target: x86_64-unknown-linux-musl
+        override: true
+    
+    - name: Install target 2
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: i686-unknown-linux-musl
         override: true
     
     - name: Build x86_64
