--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,14 +17,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Install targets
+    - name: Install x86_64-unknown-linux-musl
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
         target: x86_64-unknown-linux-musl
         override: true
     
-    - name: Install target 2
+    - name: Install i686-unknown-linux-musl
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
@@ -34,11 +34,12 @@ jobs:
     - name: Build x86_64
       run: RUSTFLAGS='-C link-arg=-s' cargo build --release --target x86_64-unknown-linux-musl
       
-    - name: Create CHANGELOG
-      uses: ardalanamini/auto-changelog@v1.1.0
+    - name: Create changelog
+      uses: saadmk11/changelog-ci@v0.7.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        output: ./CHANGELOG.md
+        changelog_filename: CHANGELOG.md
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       
     - name: Build i686
       run: RUSTFLAGS='-C link-arg=-s' cargo build --release --target i686-unknown-linux-musl
